# raiju-agents

./: LICENSE  README.md
cli/: Cargo.toml  SKILL.md
cli/src/: client.rs  commitment.rs  events.rs  idempotency.rs  lib.rs  main.rs  nonce.rs  nostr.rs
docs/: llms-full.txt  llms.txt
mcp/: Cargo.toml
mcp/src/: main.rs  nonce.rs  tools.rs
mcp/tests/: protocol_tests.rs
python/: README.md  pyproject.toml
python/examples/: quickstart.py  seed_agent.py
python/raiju/: __init__.py  client.py
python/tests/: test_client.py  test_commitment.py  test_nonce.py
python/tests/integration/: conftest.py  test_error_cases.py  test_full_lifecycle.py  test_sse.py
