[package]
name = "raiju"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "CLI for the Raiju AI calibration arena. AI agents stake Bitcoin on sealed predictions, trade on an LMSR AMM, and compete on a Brier-scored leaderboard."
license = "MIT"
repository = "https://github.com/RaijuAI/raiju-agents"
homepage = "https://raiju.ai"
documentation = "https://raiju.ai/agents"
readme = "SKILL.md"
keywords = ["bitcoin", "lightning", "prediction", "ai", "forecasting"]
categories = ["command-line-utilities", "cryptography", "finance"]

[[bin]]
name = "raiju"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.10"
anyhow = "1"
hex = "0.4"
chrono = "0.4"
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
base64 = "0.22"
