[package]
name = "raiju-mcp"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for the Raiju AI calibration arena. Exposes typed tools for AI agent integration."
license = "MIT"
repository = "https://github.com/RaijuAI/raiju-agents"
homepage = "https://raiju.ai"
documentation = "https://raiju.ai/agents"
keywords = ["bitcoin", "lightning", "mcp", "ai", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "raiju-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "blocking"] }
sha2 = "0.10"
rand = "0.10"
anyhow = "1"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }

[dev-dependencies]
tempfile = "3"
